# Sustainability-GIS

./: .gitignore  .readthedocs.yml  README.md  environment.yml  postBuild  setup.cfg
source/: conf.py  index.rst  requirements.txt
source/course-info/: License-terms.rst  attribution.rst  course-environment-components.rst  course-info.rst  grading.rst  installing-miniconda.rst  introduction.rst  learning-goals.rst  pair-programming.rst  resources.rst  slack-usage.rst
source/exercises/: exercise-1.rst  exercise-2.rst  exercise-3.rst
source/lessons/L1/: exercise-1.rst  git-basics.rst  intro-to-python-geostack.ipynb  introduction.rst  lesson-overview.rst  literature.rst  overview.rst  spatial-data-science-intro.rst  sustainability-intro.rst
source/lessons/L2/: calculating-travel-time-matrices.ipynb  exercise-2.rst  lesson-overview.rst  literature.rst  network-analytics-accessibility.rst  overview.rst  spatial_network_analysis.ipynb  wellbeing-capabilities.rst
source/lessons/L3/: economy.rst  exercise-3.ipynb  exercise-3.rst  lesson-overview.rst  literature.rst  mobilities.rst  overview.rst  spatial_econometrics.rst  spatial_regression.ipynb  trajectory-data-mining.rst
source/lessons/L4/: ABM_with_Python.ipynb  agent-based-modelling.rst  disaster-management-with-vgi.rst  economy.rst  exercise-4.rst  exercise-5.rst  lesson-overview.rst  literature.rst  mobilities.rst  overview.rst  spatial_econometrics.rst  spatial_regression.ipynb  (+2 more)
source/tutorials/: calculating-travel-time-matrices.ipynb  git-basics.rst  intro-to-python-geostack.ipynb  spatial_regression.ipynb
(+23 files in other folders)
