[metadata]
name = Spatial Data Science for Sustainable Development
version = 2021
license = MIT
description = Spatial Data Science for Sustainable Development -course.
author = Henrikki Tenkanen
url = https://github.com/AaltoGIS/sustainability-gis
classifiers =
	Development Status :: 2 -
	Environment :: Web Environment
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
include_package_data = True
zip_safe = False

[tool:release]
github_owner = AaltoGIS
github_repo = sustainability-gis